--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <% if user_signed_in? %>
+      <%= link_to 'Sair', destroy_user_session_path, method: :delete %>
+    <% end %>
+    <%= alert %>
+    <%= notice %>
     <%= yield %>
   </body>
 </html>
